sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: not found: value ecart
  ecart = getNombreValeurs;
  ^AlgCombSort:6: error: not found: value ecart
  		if(ecart>1){
                   ^AlgCombSort:7: error: not found: value ecart
    		ecart = ((ecart.toDouble) / 1.3).toInt;
                ^AlgCombSort:10: error: not found: value ecart
    	while(i+ecart < getNombreValeurs){
                ^AlgCombSort:11: error: not found: value ecart
      	if(!plusPetit(i,ecart))
                        ^AlgCombSort:13: error: not found: value ecart
        	echange(i,ecart);
                          ^AlgCombSort:17: error: not found: value ecart
  	} while(ecart>1)
                ^