sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  ecart = getNombreValeurs;
  do
  	{
  		if(ecart>1){
    		ecart = ((ecart.toDouble) / 1.3).toInt;
    	}
    	var i : Int = 0;
    	while(i+ecart < getNombreValeurs){
      	if(!plusPetit(i,ecart))
      	{
        	echange(i,ecart);
      	}
   	 		i = i+1;
    	}
  	} while(ecart>1)
  }